--- a/src/components/BranchCard/BranchCard.module.css
+++ b/src/components/BranchCard/BranchCard.module.css
@@ -9,10 +9,25 @@
   justify-content: end;
 }
 
-.card_content p{
-    width: 80%;
-    font-size: large;
+.card_content p {
+  width: 60%;
+  font-size: large;
+  text-align: justify;
+
 }
-.card_content a{
-    text-decoration: none;
+.card_content a {
+  text-decoration: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .card_content p {
+    width: 100%;
+    text-align: justify;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .card_bottom {
+    justify-content: space-between;
+  }
 }
