--- a/src/components/ValueHistoryCard/ValueHistoryCard.module.css
+++ b/src/components/ValueHistoryCard/ValueHistoryCard.module.css
@@ -10,3 +10,30 @@
   object-fit: cover;
   border-radius: 15px;
 }
+
+.Value_History_Card {
+  display: flex;
+  width: 80%;
+  box-shadow: inherit;
+}
+.Card_content{
+  display: flex;
+  width: 60%;
+  flex-direction: column;
+  gap: 15px;
+}
+
+/* Responsive */
+@media only screen and (max-width: 768px) {
+  .Value_History_Card , .Card_content{
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .cardImage {
+    width: 100%;
+  }
+  .Value_History_Card {
+    flex-direction: column;
+  }
+}
