--- a/src/pages/AboutUs/AboutUs.module.css
+++ b/src/pages/AboutUs/AboutUs.module.css
@@ -15,3 +15,15 @@
   font-size: large;
   padding: 10px;
 }
+.Divider_about{
+  width: 80%;
+}
+
+@media only screen and (max-width: 768px) {
+  .form_filed{
+    width: 100%;
+  }
+  .Divider_about{
+    width: 100%;
+  }
+}
