--- a/src/pages/Branches/Branches.module.css
+++ b/src/pages/Branches/Branches.module.css
@@ -46,11 +46,50 @@
   font-size: large;
 }
 
-
 /* Manage Branch */
-.BranchWrapper{
-    width: 80%;
-    border: 2px solid black;
-    border-radius: 5px;
-    padding: 10px;
+.BranchWrapper {
+  width: 80%;
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+/* Responsive */
+@media only screen and (max-width: 768px) {
+  .FormContainer,
+  .form_control_sub .form_input,
+  .form_input {
+    width: 100%;
+  }
+  .form_label {
+    width: 50%;
+  }
+  .form_control_sub {
+    width: 35%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .form_control {
+    flex-direction: column;
+    align-items: start;
+  }
+  .form_input input,
+  .form_input textarea,
+  .form_input select {
+    width: 100%;
+  }
+  .form_control_sub .form_label{
+    width: 40%;
+  }
+  .form_control_sub .form_input{
+    width: 50%;
+    align-items: start;
+  }
+  .form_control_sub{
+    width: 50%;
+  }
+  .BranchWrapper{
+    width: 100%;
+  }
 }
