--- a/src/pages/Slider/Slider.module.css
+++ b/src/pages/Slider/Slider.module.css
@@ -31,19 +31,23 @@
 
 /* Manage Slider */
 .TableContainer {
-  width: 100%;
+  width: 80%;
+  margin-right: auto;
 }
 .TableContainer table {
   border-collapse: collapse;
+}
+.TableContainer table thead tr th {
+  border: 1px solid #ccc !important;
 }
 .TableContainer table tbody tr td {
   min-width: 100px;
   text-align: center;
   padding: 10px;
+  border: 1px solid #ccc !important;
 }
-.TableContainer table tbody img {
-  width: 100%;
-  height: 50vmin;
+.TableContainer table tbody tr img {
+  width: 50vmin;
   object-fit: contain;
   border: 1px solid var(--text-lightGray);
   border-radius: 10px;
@@ -62,4 +66,8 @@
   .TableContainer table tbody tr td {
     min-width: inherit;
   }
+  .TableContainer {
+    width: 100%;
+  }
 }
+
